Update template with code error logic

--- a/template.net8.api/Localize/Resources/ResourceMain.en.resx
+++ b/template.net8.api/Localize/Resources/ResourceMain.en.resx
@@ -197,4 +197,12 @@
     <value>One or more validation errors occurred.</value>
     <comment>ProblemDetailsValidationTitle</comment>
   </data>
+  <data name="CreateDummyValidatorTextInvalidCode" xml:space="preserve">
+    <value>BE-CD-V-01</value>
+    <comment>CreateDummyValidatorTextInvalidCode</comment>
+  </data>
+  <data name="GetDummyValidatorNotFoundCode" xml:space="preserve">
+    <value>BE-GD-V-01</value>
+    <comment>GetDummyValidatorNotFoundCode</comment>
+  </data>
 </root>
