--- a/template.net8.api/Localize/Resources/ResourceCode.resx
+++ b/template.net8.api/Localize/Resources/ResourceCode.resx
@@ -117,84 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MapperExceptionResultNotSupported" xml:space="preserve">
-    <value>No se admite el mapeador para el tipo de excepción {0}.</value>
-    <comment>MapperExceptionResultNotSupported</comment>
+  <data name="BE-CD-V-01" xml:space="preserve">
+    <value>El campo texto al crear un dummy es obligatorio</value>
   </data>
-  <data name="ExceptionStatusCodeNotSupported" xml:space="preserve">
-    <value>No se admite el código de estatus para el tipo de excepción {0}.</value>
-    <comment>ExceptionStatusCodeNotSupported</comment>
-  </data>
-  <data name="GenericServerError" xml:space="preserve">
-    <value>Algo va mal con nuestros malditos servidores hoy.</value>
-    <comment>GenericServerError</comment>
-  </data>
-  <data name="MapperExceptionStatusCodeNotSupported" xml:space="preserve">
-    <value>El mapeador para el código de estado http {0} no es compatible.</value>
-    <comment>MapperExceptionStatusCodeNotSupported</comment>
-  </data>
-  <data name="GenieAccessTokenServerError" xml:space="preserve">
-    <value>Algo ha ido mal al crear el token de acceso para el will smith.</value>
-    <comment>GenieAccessTokenServerError</comment>
-  </data>
-  <data name="CreateDummyValidatorTextInvalidMsg" xml:space="preserve">
-    <value>Debe especificar un texto válido.</value>
-    <comment>CreateDummyValidatorTextInvalidMsg</comment>
-  </data>
-  <data name="DejaVu" xml:space="preserve">
-    <value>Un Dejavu suele ser un fallo en la matriz, ocurre cuando cambian algo.</value>
-    <comment>DejaVu</comment>
-  </data>
-  <data name="GenericClientError" xml:space="preserve">
-    <value>Parece que hay algo mal en su petición.</value>
-    <comment>GenericClientError</comment>
-  </data>
-  <data name="GenericValidatorError" xml:space="preserve">
-    <value>Hay algún problema con los validadores de su solicitud.</value>
-    <comment>GenericValidatorError</comment>
-  </data>
-  <data name="GetDummyValidatorNotFoundMsg" xml:space="preserve">
-    <value>El Dummy con el valor solicitado en tu petición no existe en el sistema.</value>
-    <comment>GetDummyValidatorNotFoundMsg</comment>
-  </data>
-  <data name="ProblemDetailsBadRequestTitle" xml:space="preserve">
-    <value>Entrada de Datos Incorrecta.</value>
-    <comment>ProblemDetailsBadRequestTitle</comment>
-  </data>
-  <data name="ProblemDetailsConflictTitle" xml:space="preserve">
-    <value>Operación No Permitida.</value>
-    <comment>ProblemDetailsConflictTitle</comment>
-  </data>
-  <data name="ProblemDetailsForbiddenTitle" xml:space="preserve">
-    <value>Acceso Prohibido.</value>
-    <comment>ProblemDetailsForbiddenTitle</comment>
-  </data>
-  <data name="ProblemDetailsGoneTitle" xml:space="preserve">
-    <value>Datos Caducados.</value>
-    <comment>ProblemDetailsGoneTitle</comment>
-  </data>
-  <data name="ProblemDetailsNotFoundTitle" xml:space="preserve">
-    <value>Datos No Encontrados.</value>
-    <comment>ProblemDetailsNotFoundTitle</comment>
-  </data>
-  <data name="ProblemDetailsRequestTimeoutTitle" xml:space="preserve">
-    <value>Timeout en la petición, vuelva a lanzar.</value>
-    <comment>ProblemDetailsRequestTimeoutTitle</comment>
-  </data>
-  <data name="ProblemDetailsUnauthorizedTitle" xml:space="preserve">
-    <value>Acceso no autorizado.</value>
-    <comment>ProblemDetailsUnauthorizedTitle</comment>
-  </data>
-  <data name="ProblemDetailsUnprocessableEntityTitle" xml:space="preserve">
-    <value>Incoherencia de los datos.</value>
-    <comment>ProblemDetailsUnprocessableEntityTitle</comment>
-  </data>
-  <data name="ProblemDetailsValidationDetail" xml:space="preserve">
-    <value>Compruebe los errores descritos y vuelva a lanzar la solicitud con los valores corregidos.</value>
-    <comment>ProblemDetailsValidationDetail</comment>
-  </data>
-  <data name="ProblemDetailsValidationTitle" xml:space="preserve">
-    <value>Se han producido uno o varios errores de validación.</value>
-    <comment>ProblemDetailsValidationTitle</comment>
+  <data name="BE-GD-V-01" xml:space="preserve">
+    <value>No existe el Dummy con el identificador enviado en la petición</value>
   </data>
 </root>
