--- a/template.net8.api/Localize/Resources/Resource.es.resx
+++ b/template.net8.api/Localize/Resources/Resource.es.resx
@@ -118,83 +118,79 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MapperExceptionResultNotSupported" xml:space="preserve">
-    <value>Mapper for exception type {0} is not supported.</value>
+    <value>No se admite el mapeador para el tipo de excepción {0}.</value>
     <comment>MapperExceptionResultNotSupported</comment>
   </data>
   <data name="ExceptionStatusCodeNotSupported" xml:space="preserve">
-    <value>Status Code for exception type {0} is not supported.</value>
+    <value>No se admite el código de estatus para el tipo de excepción {0}.</value>
     <comment>ExceptionStatusCodeNotSupported</comment>
   </data>
-  <data name="GenericServerError" xml:space="preserve">
-    <value>There is something wrong with our bloody servers today.</value>
-    <comment>GenericServerError</comment>
+  <data name="ProblemDetailsInternalServerErrorTitle" xml:space="preserve">
+    <value>Algo va mal con nuestros malditos servidores hoy.</value>
+    <comment>ProblemDetailsInternalServerErrorTitle</comment>
   </data>
   <data name="MapperExceptionStatusCodeNotSupported" xml:space="preserve">
-    <value>Mapper for http status code {0} is not supported.</value>
+    <value>El mapeador para el código de estado http {0} no es compatible.</value>
     <comment>MapperExceptionStatusCodeNotSupported</comment>
   </data>
   <data name="GenieAccessTokenServerError" xml:space="preserve">
-    <value>Something went wrong when creating the genie access token.</value>
+    <value>Algo ha ido mal al crear el token de acceso para Will Smith.</value>
     <comment>GenieAccessTokenServerError</comment>
   </data>
   <data name="CreateDummyValidatorTextInvalidMsg" xml:space="preserve">
-    <value>You must specify a valid text.</value>
+    <value>Debe especificar un texto válido.</value>
     <comment>CreateDummyValidatorTextInvalidMsg</comment>
   </data>
   <data name="DejaVu" xml:space="preserve">
-    <value>A Dejavu is usually a glitch in the matrix, it happens when they change something.</value>
+    <value>Un Dejavu suele ser un fallo en la matriz, ocurre cuando cambian algo.</value>
     <comment>DejaVu</comment>
   </data>
-  <data name="GenericClientError" xml:space="preserve">
-    <value>There is something wrong with your request.</value>
-    <comment>GenericClientError</comment>
-  </data>
   <data name="GenericValidatorError" xml:space="preserve">
-    <value>There is something wrong with the validators for your request.</value>
+    <value>Hay algún problema con los validadores de su solicitud.</value>
     <comment>GenericValidatorError</comment>
   </data>
   <data name="GetDummyValidatorNotFoundMsg" xml:space="preserve">
-    <value>The dummy key declared in your request doesn't match any dummy in the system.</value>
+    <value>El Dummy con el valor solicitado en tu petición no existe en el sistema.</value>
     <comment>GetDummyValidatorNotFoundMsg</comment>
   </data>
   <data name="ProblemDetailsBadRequestTitle" xml:space="preserve">
-    <value>Incorrect Inputs.</value>
+    <value>Entrada de Datos Incorrecta.</value>
     <comment>ProblemDetailsBadRequestTitle</comment>
   </data>
   <data name="ProblemDetailsConflictTitle" xml:space="preserve">
-    <value>Operation Not Allowed.</value>
+    <value>Operación No Permitida.</value>
     <comment>ProblemDetailsConflictTitle</comment>
   </data>
   <data name="ProblemDetailsForbiddenTitle" xml:space="preserve">
-    <value>Forbidden Access.</value>
+    <value>Acceso Prohibido.</value>
     <comment>ProblemDetailsForbiddenTitle</comment>
   </data>
   <data name="ProblemDetailsGoneTitle" xml:space="preserve">
-    <value>Expired Data.</value>
+    <value>Datos Caducados.</value>
     <comment>ProblemDetailsGoneTitle</comment>
   </data>
   <data name="ProblemDetailsNotFoundTitle" xml:space="preserve">
-    <value>Data not Found.</value>
+    <value>Datos No Encontrados.</value>
     <comment>ProblemDetailsNotFoundTitle</comment>
   </data>
   <data name="ProblemDetailsRequestTimeoutTitle" xml:space="preserve">
-    <value>Request Timeout. Try Again.</value>
+    <value>Timeout en la petición, vuelva a lanzar.</value>
     <comment>ProblemDetailsRequestTimeoutTitle</comment>
   </data>
   <data name="ProblemDetailsUnauthorizedTitle" xml:space="preserve">
-    <value>Unauthorized Access.</value>
+    <value>Acceso No Autorizado.</value>
     <comment>ProblemDetailsUnauthorizedTitle</comment>
   </data>
   <data name="ProblemDetailsUnprocessableEntityTitle" xml:space="preserve">
-    <value>Data inconsistency.</value>
+    <value>Incoherencia De los datos.</value>
     <comment>ProblemDetailsUnprocessableEntityTitle</comment>
   </data>
   <data name="ProblemDetailsValidationDetail" xml:space="preserve">
-    <value>Check the described errors and relaunch the request with the fixed values.</value>
+    <value>Compruebe los errores descritos y vuelva a lanzar la solicitud con los valores corregidos.</value>
     <comment>ProblemDetailsValidationDetail</comment>
   </data>
   <data name="ProblemDetailsValidationTitle" xml:space="preserve">
-    <value>One or more validation errors occurred.</value>
+    <value>Se han producido uno o varios errores de validación.</value>
     <comment>ProblemDetailsValidationTitle</comment>
   </data>
   <data name="CreateDummyValidatorTextInvalidCode" xml:space="preserve">
@@ -204,5 +200,105 @@
   <data name="GetDummyValidatorNotFoundCode" xml:space="preserve">
     <value>BE-GD-V-01</value>
     <comment>GetDummyValidatorNotFoundCode</comment>
+  </data>
+  <data name="ProblemDetailsValidationCode" xml:space="preserve">
+    <value>BE-R-EV-001</value>
+    <comment>ProblemDetailsValidationCode</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestValidationJsonMalformedDetail" xml:space="preserve">
+    <value>La carga útil está malformada y no es un archivo json válido.</value>
+    <comment>ProblemDetailsBadRequestValidationJsonMalformedDetail</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestValidationJsonMalformedCode" xml:space="preserve">
+    <value>BE-R-EV-002</value>
+    <comment>ProblemDetailsBadRequestValidationJsonMalformedCode</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestValidationJsonInvalidDetail" xml:space="preserve">
+    <value>El Json utilizado como carga útil no cumple el contrato requerido.</value>
+    <comment>ProblemDetailsBadRequestValidationJsonInvalidDetail</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestValidationJsonInvalidCode" xml:space="preserve">
+    <value>BE-R-EV-003</value>
+    <comment>ProblemDetailsBadRequestValidationJsonInvalidCode</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestCode" xml:space="preserve">
+    <value>BE-R-E-400</value>
+    <comment>ProblemDetailsBadRequestCode</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestHttpNotSupportedTitle" xml:space="preserve">
+    <value>HTTP protocol is not allowed.</value>
+    <comment>ProblemDetailsBadRequestHttpNotSupportedTitle</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestHttpNotSupportedDetail" xml:space="preserve">
+    <value>HTTPS protocol is required.</value>
+    <comment>ProblemDetailsBadRequestHttpNotSupportedDetail</comment>
+  </data>
+  <data name="ProblemDetailsBadRequestHttpNotSupportedCode" xml:space="preserve">
+    <value>BE-R-E-001</value>
+    <comment>ProblemDetailsBadRequestHttpNotSupportedCode</comment>
+  </data>
+  <data name="ProblemDetailsUnauthorizedCode" xml:space="preserve">
+    <value>BE-R-E-401</value>
+    <comment>ProblemDetailsUnauthorizedCode</comment>
+  </data>
+  <data name="ProblemDetailsForbiddenCode" xml:space="preserve">
+    <value>BE-R-E-403</value>
+    <comment>ProblemDetailsForbiddenCode</comment>
+  </data>
+  <data name="ProblemDetailsNotFoundCode" xml:space="preserve">
+    <value>BE-R-E-404</value>
+    <comment>ProblemDetailsNotFoundCode</comment>
+  </data>
+  <data name="ProblemDetailsMethodNotAllowedTitle" xml:space="preserve">
+    <value>Método no Permitido.</value>
+    <comment>ProblemDetailsMethodNotAllowedTitle</comment>
+  </data>
+  <data name="ProblemDetailsMethodNotAllowedCode" xml:space="preserve">
+    <value>BE-R-E-405</value>
+    <comment>ProblemDetailsMethodNotAllowedCode</comment>
+  </data>
+  <data name="ProblemDetailsRequestTimeoutCode" xml:space="preserve">
+    <value>BE-R-E-408</value>
+    <comment>ProblemDetailsRequestTimeoutCode</comment>
+  </data>
+  <data name="ProblemDetailsConflictCode" xml:space="preserve">
+    <value>BE-R-E-409</value>
+    <comment>ProblemDetailsConflictCode</comment>
+  </data>
+  <data name="ProblemDetailsGoneCode" xml:space="preserve">
+    <value>BE-R-E-410</value>
+    <comment>ProblemDetailsGoneCode</comment>
+  </data>
+  <data name="ProblemDetailsUnsupportedMediaTypeTitle" xml:space="preserve">
+    <value>Cabecera HTTP Content Type No Permitida.</value>
+    <comment>ProblemDetailsUnsupportedMediaTypeTitle</comment>
+  </data>
+  <data name="ProblemDetailsUnsupportedMediaTypeCode" xml:space="preserve">
+    <value>BE-R-E-415</value>
+    <comment>ProblemDetailsUnsupportedMediaTypeCode</comment>
+  </data>
+  <data name="ProblemDetailsUnprocessableEntityCode" xml:space="preserve">
+    <value>BE-R-E-422</value>
+    <comment>ProblemDetailsUnprocessableEntityCode</comment>
+  </data>
+  <data name="ProblemDetailsTooManyRequestTitle" xml:space="preserve">
+    <value>Demasiadas Peticiones.</value>
+    <comment>ProblemDetailsTooManyRequestTitle</comment>
+  </data>
+  <data name="ProblemDetailsTooManyRequestCode" xml:space="preserve">
+    <value>BE-R-E-429</value>
+    <comment>ProblemDetailsTooManyRequestCode</comment>
+  </data>
+  <data name="ProblemDetailsInternalServerErrorCode" xml:space="preserve">
+    <value>BE-R-E-500</value>
+    <comment>ProblemDetailsInternalServerErrorCode</comment>
+  </data>
+  <data name="ProblemDetailsNotImplementedTitle" xml:space="preserve">
+    <value>No Implementado.</value>
+    <comment>ProblemDetailsNotImplementedTitle</comment>
+  </data>
+  <data name="ProblemDetailsNotImplementedCode" xml:space="preserve">
+    <value>BE-R-E-501</value>
+    <comment>ProblemDetailsNotImplementedCode</comment>
   </data>
 </root>
