--- a/template.net8.api/Localize/Resources/Resource.resx
+++ b/template.net8.api/Localize/Resources/Resource.resx
@@ -119,266 +119,203 @@
   </resheader>
   <data name="MapperExceptionResultNotSupported" xml:space="preserve">
     <value>Mapper for exception type {0} is not supported.</value>
-    <comment>MapperExceptionResultNotSupported</comment>
   </data>
   <data name="ExceptionStatusCodeNotSupported" xml:space="preserve">
     <value>Status Code for exception type {0} is not supported.</value>
-    <comment>ExceptionStatusCodeNotSupported</comment>
   </data>
   <data name="ProblemDetailsInternalServerErrorTitle" xml:space="preserve">
     <value>There is something wrong with our bloody servers today.</value>
-    <comment>GenericServerError</comment>
   </data>
   <data name="MapperExceptionStatusCodeNotSupported" xml:space="preserve">
     <value>Mapper for http status code {0} is not supported.</value>
-    <comment>MapperExceptionStatusCodeNotSupported</comment>
   </data>
   <data name="GenieAccessTokenServerError" xml:space="preserve">
     <value>Something went wrong when creating the genie access token.</value>
-    <comment>GenieAccessTokenServerError</comment>
   </data>
   <data name="CreateDummyValidatorTextInvalidMsg" xml:space="preserve">
     <value>You must specify a valid text.</value>
-    <comment>CreateDummyValidatorTextInvalidMsg</comment>
   </data>
   <data name="DejaVu" xml:space="preserve">
     <value>A Dejavu is usually a glitch in the matrix, it happens when they change something.</value>
-    <comment>DejaVu</comment>
   </data>
   <data name="GenericValidatorError" xml:space="preserve">
     <value>There is something wrong with the validators for your request.</value>
-    <comment>GenericValidatorError</comment>
   </data>
   <data name="GetDummyValidatorNotFoundMsg" xml:space="preserve">
     <value>The dummy key declared in your request doesn't match any dummy in the system.</value>
-    <comment>GetDummyValidatorNotFoundMsg</comment>
   </data>
   <data name="ProblemDetailsBadRequestTitle" xml:space="preserve">
     <value>Incorrect Inputs.</value>
-    <comment>ProblemDetailsBadRequestTitle</comment>
   </data>
   <data name="ProblemDetailsConflictTitle" xml:space="preserve">
     <value>Operation Not Allowed.</value>
-    <comment>ProblemDetailsConflictTitle</comment>
   </data>
   <data name="ProblemDetailsForbiddenTitle" xml:space="preserve">
     <value>Forbidden Access.</value>
-    <comment>ProblemDetailsForbiddenTitle</comment>
   </data>
   <data name="ProblemDetailsGoneTitle" xml:space="preserve">
     <value>Expired Data.</value>
-    <comment>ProblemDetailsGoneTitle</comment>
   </data>
   <data name="ProblemDetailsNotFoundTitle" xml:space="preserve">
     <value>Data not Found.</value>
-    <comment>ProblemDetailsNotFoundTitle</comment>
   </data>
   <data name="ProblemDetailsRequestTimeoutTitle" xml:space="preserve">
     <value>Request Timeout. Try Again.</value>
-    <comment>ProblemDetailsRequestTimeoutTitle</comment>
   </data>
   <data name="ProblemDetailsUnauthorizedTitle" xml:space="preserve">
     <value>Unauthorized Access.</value>
-    <comment>ProblemDetailsUnauthorizedTitle</comment>
   </data>
   <data name="ProblemDetailsUnprocessableEntityTitle" xml:space="preserve">
     <value>Data inconsistency.</value>
-    <comment>ProblemDetailsUnprocessableEntityTitle</comment>
   </data>
   <data name="ProblemDetailsValidationDetail" xml:space="preserve">
     <value>Check the described errors and relaunch the request with the fixed values.</value>
-    <comment>ProblemDetailsValidationDetail</comment>
   </data>
   <data name="ProblemDetailsValidationTitle" xml:space="preserve">
     <value>One or more validation errors occurred.</value>
-    <comment>ProblemDetailsValidationTitle</comment>
   </data>
   <data name="CreateDummyValidatorTextInvalidCode" xml:space="preserve">
     <value>BE-CD-EV-001</value>
-    <comment>CreateDummyValidatorTextInvalidCode</comment>
   </data>
   <data name="GetDummyValidatorNotFoundCode" xml:space="preserve">
     <value>BE-GD-EV-001</value>
-    <comment>GetDummyValidatorNotFoundCode</comment>
   </data>
   <data name="BE-CD-EV-001" xml:space="preserve">
     <value>El campo texto al crear un dummy es obligatorio.</value>
-    <comment>BE-CD-EV-001</comment>
   </data>
   <data name="BE-GD-EV-001" xml:space="preserve">
     <value>No existe el Dummy con el identificador enviado en la petición.</value>
-    <comment>BE-GD-EV-001</comment>
   </data>
   <data name="ProblemDetailsValidationCode" xml:space="preserve">
     <value>BE-R-EV-001</value>
-    <comment>ProblemDetailsValidationCode</comment>
   </data>
   <data name="ProblemDetailsBadRequestValidationJsonMalformedDetail" xml:space="preserve">
     <value>The payload is malformed and is not a valid json file.</value>
-    <comment>ProblemDetailsBadRequestValidationJsonMalformedDetail</comment>
   </data>
   <data name="ProblemDetailsBadRequestValidationJsonMalformedCode" xml:space="preserve">
     <value>BE-R-EV-002</value>
-    <comment>ProblemDetailsBadRequestValidationJsonMalformedCode</comment>
   </data>
   <data name="ProblemDetailsBadRequestCode" xml:space="preserve">
     <value>BE-R-E-400</value>
-    <comment>ProblemDetailsBadRequestCode</comment>
   </data>
   <data name="ProblemDetailsBadRequestHttpNotSupportedCode" xml:space="preserve">
     <value>BE-R-E-001</value>
-    <comment>ProblemDetailsBadRequestHttpNotSupportedCode</comment>
   </data>
   <data name="ProblemDetailsBadRequestHttpNotSupportedDetail" xml:space="preserve">
     <value>HTTPS protocol is required.</value>
-    <comment>ProblemDetailsBadRequestHttpNotSupportedDetail</comment>
   </data>
   <data name="ProblemDetailsBadRequestHttpNotSupportedTitle" xml:space="preserve">
     <value>HTTP protocol is not allowed.</value>
-    <comment>ProblemDetailsBadRequestHttpNotSupportedTitle</comment>
   </data>
   <data name="ProblemDetailsBadRequestValidationJsonInvalidCode" xml:space="preserve">
     <value>BE-R-EV-003</value>
-    <comment>ProblemDetailsBadRequestValidationJsonInvalidCode</comment>
   </data>
   <data name="ProblemDetailsBadRequestValidationJsonInvalidDetail" xml:space="preserve">
     <value>The Json used as payload does not honour the required contract.</value>
-    <comment>ProblemDetailsBadRequestValidationJsonInvalidDetail</comment>
   </data>
   <data name="ProblemDetailsConflictCode" xml:space="preserve">
     <value>BE-R-E-409</value>
-    <comment>ProblemDetailsConflictCode</comment>
   </data>
   <data name="ProblemDetailsForbiddenCode" xml:space="preserve">
     <value>BE-R-E-403</value>
-    <comment>ProblemDetailsForbiddenCode</comment>
   </data>
   <data name="ProblemDetailsGoneCode" xml:space="preserve">
     <value>BE-R-E-410</value>
-    <comment>ProblemDetailsGoneCode</comment>
   </data>
   <data name="ProblemDetailsMethodNotAllowedCode" xml:space="preserve">
     <value>BE-R-E-405</value>
-    <comment>ProblemDetailsMethodNotAllowedCode</comment>
   </data>
   <data name="ProblemDetailsMethodNotAllowedTitle" xml:space="preserve">
     <value>Method Not Allowed.</value>
-    <comment>ProblemDetailsMethodNotAllowedTitle</comment>
   </data>
   <data name="ProblemDetailsNotFoundCode" xml:space="preserve">
     <value>BE-R-E-404</value>
-    <comment>ProblemDetailsNotFoundCode</comment>
   </data>
   <data name="ProblemDetailsRequestTimeoutCode" xml:space="preserve">
     <value>BE-R-E-408</value>
-    <comment>ProblemDetailsRequestTimeoutCode</comment>
   </data>
   <data name="ProblemDetailsUnauthorizedCode" xml:space="preserve">
     <value>BE-R-E-401</value>
-    <comment>ProblemDetailsUnauthorizedCode</comment>
   </data>
   <data name="ProblemDetailsUnprocessableEntityCode" xml:space="preserve">
     <value>BE-R-E-422</value>
-    <comment>ProblemDetailsUnprocessableEntityCode</comment>
   </data>
   <data name="ProblemDetailsUnsupportedMediaTypeCode" xml:space="preserve">
     <value>BE-R-E-415</value>
-    <comment>ProblemDetailsUnsupportedMediaTypeCode</comment>
   </data>
   <data name="ProblemDetailsUnsupportedMediaTypeTitle" xml:space="preserve">
     <value>Content Type Header Not Allowed.</value>
-    <comment>ProblemDetailsUnsupportedMediaTypeTitle</comment>
   </data>
   <data name="BE-R-E-001" xml:space="preserve">
     <value>Esta API no permite conexiones usando HTTP, usé el protocolo HTTPS</value>
-    <comment>BE-R-E-001</comment>
   </data>
   <data name="BE-R-E-400" xml:space="preserve">
     <value>Hay algo que está mal en la petición, revísela antes de volver a intentarlo.</value>
-    <comment>BE-R-E-400</comment>
   </data>
   <data name="BE-R-E-401" xml:space="preserve">
     <value>Acceso no autorizado. Debe presentar credenciales válidas para acceder.</value>
-    <comment>BE-R-E-401</comment>
   </data>
   <data name="BE-R-E-403" xml:space="preserve">
     <value>Acceso prohibido. No tiene permisos para acceder.</value>
-    <comment>BE-R-E-403</comment>
   </data>
   <data name="BE-R-E-404" xml:space="preserve">
     <value>El elemento que busca no existe en el sistema.</value>
-    <comment>BE-R-E-404</comment>
   </data>
   <data name="BE-R-E-405" xml:space="preserve">
     <value>El verbo HTTP que está usando no está permitido para este método.</value>
-    <comment>BE-R-E-405</comment>
   </data>
   <data name="BE-R-E-408" xml:space="preserve">
     <value>Se ha alcanzado el tiempo máximo de espera en la petición, vuelva a intentarlo.</value>
-    <comment>BE-R-E-408</comment>
   </data>
   <data name="BE-R-E-409" xml:space="preserve">
     <value>La petición puede provocar un conflicto y no puede llevarse a cabo.</value>
-    <comment>BE-R-E-409</comment>
   </data>
   <data name="BE-R-E-410" xml:space="preserve">
     <value>El elemento que busca ya no existe en el sistema y se ha borrado.</value>
-    <comment>BE-R-E-410</comment>
   </data>
   <data name="BE-R-E-415" xml:space="preserve">
     <value>La cabecera content-type en la petición no tiene un valor admitido por la API para el método requerido.</value>
-    <comment>BE-R-E-415</comment>
   </data>
   <data name="BE-R-E-422" xml:space="preserve">
     <value>La petición está bien formada, pero uno de los valores no es correcto. Cámbielo antes de volver a intentarlo.</value>
-    <comment>BE-R-E-422</comment>
   </data>
   <data name="BE-R-E-429" xml:space="preserve">
     <value>Está sobrepasando el límite de peticiones que puede gestionar la API. Reduzca el ritmo de peticiones y esperé unos minutos antes de continuar.</value>
-    <comment>BE-R-E-429</comment>
   </data>
   <data name="BE-R-E-500" xml:space="preserve">
     <value>Se ha producido un error en el servidor, esperé unos minutos. Si el error persiste, contacte con IH-IT.</value>
-    <comment>BE-R-E-500</comment>
   </data>
   <data name="BE-R-E-501" xml:space="preserve">
     <value>Estamos trabajando en ello.</value>
-    <comment>BE-R-E-501</comment>
   </data>
   <data name="BE-R-EV-001" xml:space="preserve">
     <value>La petición presenta varios errores de validación, resuélvalos antes de volver a intentarlo.</value>
-    <comment>BE-R-EV-001</comment>
   </data>
   <data name="BE-R-EV-002" xml:space="preserve">
     <value>El fichero JSON de la petición está malformado, revíselo antes de volver a intentarlo.</value>
-    <comment>BE-R-EV-002</comment>
   </data>
   <data name="BE-R-EV-003" xml:space="preserve">
     <value>El fichero JSON de la petición está bien formado, pero no cumple el contrato expuesto por la API. Revise el contrato y el JSON antes de volver a intentarlo.</value>
-    <comment>BE-R-EV-003</comment>
   </data>
   <data name="ProblemDetailsInternalServerErrorCode" xml:space="preserve">
     <value>BE-R-E-500</value>
-    <comment>ProblemDetailsInternalServerErrorCode</comment>
   </data>
   <data name="ProblemDetailsNotImplementedCode" xml:space="preserve">
     <value>BE-R-E-501</value>
-    <comment>ProblemDetailsNotImplementedCode</comment>
   </data>
   <data name="ProblemDetailsNotImplementedTitle" xml:space="preserve">
     <value>Not Implemented.</value>
-    <comment>ProblemDetailsNotImplementedTitle</comment>
   </data>
   <data name="ProblemDetailsTooManyRequestCode" xml:space="preserve">
     <value>BE-R-E-429</value>
-    <comment>ProblemDetailsTooManyRequestCode</comment>
   </data>
   <data name="ProblemDetailsTooManyRequestTitle" xml:space="preserve">
     <value>Too Many Requests.</value>
-    <comment>ProblemDetailsTooManyRequestTitle</comment>
   </data>
   <data name="BE-BROKEN-ARROW" xml:space="preserve">
     <value>Algo ha ido terriblemente mal. Reporte el Problem Details completo a IT.</value>
-    <comment>BE-BROKEN-ARROW</comment>
+  </data>
+  <data name="InternalServerErrorValidationData" xml:space="preserve">
+    <value>An error occurred in the data validation process against the database.</value>
   </data>
 </root>
