--- a/template.net8.api/Localize/Resources/ResourceMain.es.resx
+++ b/template.net8.api/Localize/Resources/ResourceMain.es.resx
@@ -273,4 +273,13 @@
 <data name="ProblemDetailsUnauthorizedProcessFailCode" xml:space="preserve">
   <value>BE-R-E-003</value>
 </data>
+ <data name="ProblemDetailsUnauthorizedMissingTokenTitle" xml:space="preserve">
+  <value>Token Ausente.</value>
+</data>
+<data name="ProblemDetailsUnauthorizedMissingTokenDetail" xml:space="preserve">
+  <value>Token de autenticación no presente.</value>
+</data>
+<data name="ProblemDetailsUnauthorizedMissingTokenCode" xml:space="preserve">
+  <value>BE-R-E-004</value>
+</data>
 </root>
